cmake_minimum_required(VERSION 3.29)
project(modo C)

set(CMAKE_C_STANDARD 11)

add_executable(modo main.c)
add_executable(main01 main01.c)
add_executable(main02 main02.c)
add_executable(main03 main03.c)
add_executable(main04 main04.c)
add_executable(main05 main05.c)
add_executable(main06 main06.c)
add_executable(main07 main07.c)
